# pong

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pong
.github/workflows/: linux.yml  windows.yml  windowsyml-todo
src/: draw.c  draw.h  globals.h  macros.c  macros.h  main.c  structs.h
